--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@
 }
 
 main {
+    margin-top: 5rem;
     width: 100%;
     justify-content: center;
     padding: 0;
@@ -61,8 +62,8 @@ main .line {
 }
 
 .right {
-    width: 25rem;
-    height: 25rem;
+    width: 20rem;
+    height: 20rem;
     background-size: cover;
     background-image: url(/cat.png)
 }
@@ -217,9 +218,15 @@ code {
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 767.98px) {
     .grid {
         width: 100%;
         flex-direction: column;
+    }
+    .title {
+        font-size: 3rem;
+    }
+    .buttons {
+        zoom: 0.8;
     }
 }
