--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,10 @@ html {
     background: #f5f5f5;
 }
 
+body {
+    margin: 0;
+}
+
 .container {
     user-select: none;
     min-height: 100vh;
@@ -95,6 +99,7 @@ main .line {
     background: linear-gradient(179.86deg, #62E09F -7.21%, #07C160 105.93%);
     border-radius: 0.5rem;
     color: #ffff;
+    margin-right: 20px;
 }
 
 .button:hover {
@@ -186,5 +191,15 @@ code {
     }
     to {
         opacity: 1;
+    }
+}
+
+@keyframes wider {
+    from {
+        width: 200px;
+    }
+
+    to {
+        width: 90%;
     }
 }
