--- a/compoents/header.module.css
+++ b/compoents/header.module.css
@@ -1,6 +1,7 @@
     .header {
         border-radius: 0rem 0rem 2rem 2rem;
         max-width: 1200px;
+        padding-top: 4rem;
         width: 100%;
         display: flex;
         align-items: center;
@@ -9,7 +10,38 @@
         border-bottom: 1px solid #00000005;
         background: #ffffff80;
         backdrop-filter: blur(100px);
+        animation: slide 500ms 500ms forwards;
+        transform: translateY(0rem);
+        transition: transform 500ms 3000ms;
     }
+
+    .header:hover {
+        transform: translateY(4rem);
+        transition: transform 500ms 100ms;
+    }
+
+    .header::before {
+        width: 50px;
+        height: 50px;
+        background: radial-gradient(circle at 0 50px, transparent, transparent 50px, #ffffff80 50px);
+        position: absolute;
+        content: '';
+        left: -50px;
+        top: 0;
+        backdrop-filter: blur(100px);
+    }
+
+    .header::after {
+        content: '';
+        width: 50px;
+        height: 50px;
+        background: radial-gradient(circle at 50px 50px, transparent, transparent 50px, #ffffff80 50px);
+        position: absolute;
+        right: -50px;
+        top: 0;
+        backdrop-filter: blur(100px);
+    }
+
 
     .header .logo {
         margin: 1rem 2rem;
@@ -39,5 +71,31 @@
 
         .header {
             border-radius: 0rem;
+        }
+
+
+        .header::after {
+            content: '🍋';
+            text-align: center;
+            width: 50px;
+            padding-top: 20px;
+            padding-bottom: 10px;
+            height: 20px;
+            background: #ffffff80;
+            border-radius: 0px 0px 10px 10px;
+            position: absolute;
+            right: 50px;
+            top: 7rem;
+            backdrop-filter: blur(100px);
+        }
+    }
+
+    @keyframes slide {
+        from {
+            margin-top: 0rem;
+        }
+
+        to {
+            margin-top: -8rem;
         }
     }
