--- a/compoents/header.module.css
+++ b/compoents/header.module.css
@@ -8,8 +8,8 @@
         position: fixed;
         top: 0;
         border-bottom: 1px solid #00000005;
-        background: #ffffff80;
-        backdrop-filter: blur(100px);
+        background: #ffffff;
+        /* backdrop-filter: blur(100px); */
         animation: slide 500ms 500ms forwards;
         transform: translateY(0rem);
         transition: transform 500ms 3000ms;
@@ -23,12 +23,12 @@
     .header::before {
         width: 50px;
         height: 50px;
-        background: radial-gradient(circle at 0 50px, transparent, transparent 50px, #ffffff80 50px);
+        background: radial-gradient(circle at 0 50px, transparent, transparent 50px, #ffffff 50px);
         position: absolute;
         content: '';
         left: -50px;
         top: 0;
-        backdrop-filter: blur(100px);
+        /* backdrop-filter: blur(100px); */
     }
 
     .header::after {
@@ -39,7 +39,7 @@
         position: absolute;
         right: -50px;
         top: 0;
-        backdrop-filter: blur(100px);
+        /* backdrop-filter: blur(100px); */
     }
 
 
