--- a/compoents/header.module.css
+++ b/compoents/header.module.css
@@ -1,6 +1,6 @@
     .header {
         border-radius: 0rem 0rem 2rem 2rem;
-        max-width: 1200px;
+        max-width: 1000px;
         width: 100%;
         display: flex;
         align-items: center;
@@ -35,7 +35,7 @@
         content: '';
         width: 50px;
         height: 50px;
-        background: radial-gradient(circle at 50px 50px, transparent, transparent 50px, #ffffff80 50px);
+        background: radial-gradient(circle at 50px 50px, transparent, transparent 50px, #ffffff 50px);
         position: absolute;
         right: -50px;
         top: 0;
