--- a/compoents/header.module.css
+++ b/compoents/header.module.css
@@ -5,6 +5,7 @@
         display: flex;
         align-items: center;
         position: fixed;
+        z-index: 5;
         top: 0;
         border-bottom: 1px solid #00000005;
         background: #ffffff;
