--- a/pages/tree/style.module.css
+++ b/pages/tree/style.module.css
@@ -1,7 +1,7 @@
 .tree {
     position: absolute;
     overflow: hidden;
-    opacity: 1;
+    /* opacity: 1; */
     width: 100%;
     height: 100vh;
     z-index: -1;
