--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+
+@theme {
+    --color-primary: #07C160;
+}
+
+/* home page use start */
+
+@utility pretty-text {
+    background-image: linear-gradient(180deg, #62E09F, #07C160);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+@utility grid-background {
+    background-image: linear-gradient(to right, #f3f4f6 1px, transparent 1px),
+        linear-gradient(to bottom, #f3f4f6 1px, transparent 1px);
+    background-size: 20px 20px;
+    background-position: 0 0;
+}
+
+/* home page use end */
