feat: 添加 lucide-react 依赖并统一字体类名为 font-basic

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     --color-secondary: #C4E0C6;
 }
 
-@utility basic-font {
+@utility font-basic {
     font-family: 'Playwrite AU QLD', 'Noto Serif SC', sans-serif;
 }
 
