Refactor BlockSwitcher to use dynamic imports and fix typo
BlockSwitcher now uses React.lazy and Suspense for dynamic code splitting of block components, improving performance. Also fixed a typo by renaming PhototBlock.tsx to PhotoBlock.tsx and updated imports accordingly. Minor CSS utility addition in index.css.

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
     --color-secondary: #C4E0C6;
 }
 
+@source inline("col-span-{1,2,4} row-span-{1,2,4}");
+
+
 @utility font-basic {
     font-family: 'Playwrite AU QLD', 'Noto Serif SC', sans-serif;
 }
