--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@
 }
 
 @utility grid-background {
-    background-image: linear-gradient(to right, #f3f4f6 1px, transparent 1px),
-        linear-gradient(to bottom, #f3f4f6 1px, transparent 1px);
+    background-image: linear-gradient(to right, #f3f4f660 1px, transparent 1px),
+        linear-gradient(to bottom, #f3f4f660 1px, transparent 1px);
     background-size: 20px 20px;
     background-position: 0 0;
 
